src/objects/Drop_in_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brief Intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRAlink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CRA associated with this Attendance at Drop-in</inlineHelpText>
        <label>CRA Link</label>
        <referenceTo>CRA__c</referenceTo>
        <relationshipLabel>Drop-in Attendance</relationshipLabel>
        <relationshipName>Drop_in_Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Drop-in Attendance</relationshipLabel>
        <relationshipName>Drop_in_Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Drop_in__c</fullName>
        <label>Drop-in</label>
        <referenceTo>Drop_in__c</referenceTo>
        <relationshipLabel>Drop-in Attendance</relationshipLabel>
        <relationshipName>Drop_in_Attendance</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Education_Informatiion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education -Informatiion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harm_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harm Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Attending__c</fullName>
        <label>Reason for Attending</label>
        <picklist>
            <picklistValues>
                <fullName>Homeless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_other_note__c</fullName>
        <label>Reason other note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social</label>
        <type>Checkbox</type>
    </fields>
    <label>Drop-in Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <columns>Outcome__c</columns>
        <columns>Education_Informatiion__c</columns>
        <columns>Food__c</columns>
        <columns>Harm_Reduction__c</columns>
        <columns>Reason_other_note__c</columns>
        <columns>Social__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Drop-in {DDMMYY}-{00}</displayFormat>
        <label>Drop-in Attendance  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drop-in Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>